# dev-tools-cli

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci-1-start.yml  ci-2-pytest.yml  make_docs.yml
cli/: .gitignore  pyproject.toml
cli/cli/: constants.py  main.py  types.py
cli/cli/parameter_store/: __init__.py  actions.py  exceptions.py  main.py  requests_client.py  types.py  utils.py  validate.py
cli/cli/services/aws/: clients_service.py  config_service.py  constants.py  exceptions.py
cli/cli/sso/: __init__.py  constants.py  exceptions.py  main.py  manage_config.py  utils.py  words.py
cli/cli/tests/: conftest.py
cli/cli/tests/parameter_store/: test_param_request.py  test_param_review.py  test_utils.py  test_validate.py
cli/cli/tests/services/aws/: test_clients_service.py  test_config_service.py
cli/cli/tests/services/aws/mock_sso_cache/: token1.json  token2.json
cli/cli/tests/sso/: test_sso.py
cli/scripts/: make_docs  manage_release_version.py
docs/: 1-INSTALL.md  3-DESIGN.md  4-CONTRIBUTING.md
infra/modules/dev-tools/: iam.tf  input.tf  lambda.tf  local.tf  output.tf  s3.tf  sqs.tf
